// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Affix 1`] = `
<div>
  <label
    data-weight="medium"
    for="textfield-affix"
  >
    Hvor mange kroner koster det per måned?
  </label>
  <div>
    <span aria-hidden="true">
      NOK
    </span>
    <input
      id="textfield-affix"
      inputmode="numeric"
      type="text"
    >
    <span aria-hidden="true">
      pr. mnd
    </span>
  </div>
</div>
`;

exports[`Controlled 1`] = `
<div style="display: flex; gap: var(--ds-size-2); align-items: end; width: 100%;">
  <div style="flex-grow: 1;">
    <label
      data-weight="medium"
      for="textfield-controlled"
    >
      Fullt navn
    </label>
    <div>
      <input
        id="textfield-controlled"
        type="text"
        value
      >
    </div>
  </div>
  <button
    data-variant="secondary"
    type="button"
  >
    Tøm feltet
  </button>
</div>
`;

exports[`Counter 1`] = `
<div>
  <label
    data-weight="medium"
    for="textfield-counter"
  >
    Hvor mange kroner koster det per måned?
  </label>
  <div>
    <input
      id="textfield-counter"
      inputmode="numeric"
      type="text"
      aria-describedby="textfield-counter:description:1"
    >
  </div>
  <div aria-live="polite">
  </div>
  <p
    data-variant="default"
    aria-hidden="true"
  >
    10 tegn igjen
  </p>
  <div
    aria-hidden="true"
    data-field="description"
    id="textfield-counter:description:1"
  >
    Maks 10 tegn tillatt.
  </div>
</div>
`;

exports[`Disabled 1`] = `
<div>
  <label
    data-weight="medium"
    for="textfield-disabled"
  >
    Disabled Textfield
  </label>
  <div>
    <input
      id="textfield-disabled"
      disabled
      type="text"
    >
  </div>
</div>
<div>
  <label
    data-weight="medium"
    for="multiline-textfield-disabled"
  >
    Disabled multiline Textfield
  </label>
  <div>
    <textarea
      id="multiline-textfield-disabled"
      rows="4"
      disabled
    >
    </textarea>
  </div>
</div>
`;

exports[`Focused 1`] = `
<div>
  <label
    data-weight="medium"
    for="textfield-preview"
  >
    Label
  </label>
  <div>
    <input
      id="textfield-preview"
      type="text"
    >
  </div>
</div>
`;

exports[`Preview 1`] = `
<div>
  <label
    data-weight="medium"
    for="textfield-preview"
  >
    Label
  </label>
  <div>
    <input
      id="textfield-preview"
      type="text"
    >
  </div>
</div>
`;

exports[`Read Only 1`] = `
<div>
  <label
    data-weight="medium"
    for="textfield-readonly"
  >
    ReadOnly Textfield
  </label>
  <div>
    <input
      id="textfield-readonly"
      readonly
      type="text"
    >
  </div>
</div>
<div>
  <label
    data-weight="medium"
    for="multiline-textfield-readonly"
  >
    ReadOnly multiline Textfield
  </label>
  <div>
    <textarea
      id="multiline-textfield-readonly"
      rows="4"
      readonly
    >
    </textarea>
  </div>
</div>
`;

exports[`Rows 1`] = `
<div>
  <label
    data-weight="medium"
    for="textfield-rows"
  >
    Beskrivelse
  </label>
  <div>
    <textarea
      rows="4"
      id="textfield-rows"
    >
    </textarea>
  </div>
</div>
`;
